tests/NormalTests/paczka2/big_fuzzy/69003972.err
Error in line 2: BFlz A793 857,7
Error in line 5: S543 A793 28,0
Error in line 12: S543 S543 18,5
Error in line 23: pN0q34FxZ S543 42,3
Error in line 11: FGFu A793 86,7
Error in line 21: wzrBqNnQw S210 37,6
Error in line 34: wzrBqNnQw A347 50,4
Error in line 37: wzrBqNnQw A793 23,7
Error in line 46: pN0q34FxZ A347 29,6
Error in line 28: S543 S210 103,7
Error in line 58: wzrBqNnQw S543 6,1
Error in line 64: FGFu A347 10,2
Error in line 59: wzrBqNnQw A347 43,1
Error in line 60: Udpr S210 77,2
Error in line 83: pN0q34FxZ S210 242,0
Error in line 81: S543 S210 38,3
Error in line 93: pN0q34FxZ S543 91,59
Error in line 84: pN0q34FxZ A793 47,5
Error in line 90: vcG1oesr A793 15,5
Error in line 103: vcG1oesr S543 44,4
Error in line 104: S543 A793 65,3
Error in line 110: wzrBqºnQw S210 39,4
Error in line 102: pN0q34FxZ A347 259,7
Error in line 115: Udpr S210 23,5
Error in line 120: Udpr S543 94,3
Error in line 123: wzrBqNnQw S210 51,4
Error in line 132: Udpr S210 1,6
Error in line 142: FGFu S543 44,0
Error in line 156: BFlz A347 82,5
Error in line 157: vcG1oesr A347 58,5
Error in line 179: Udpr S210 14,6
Error in line 177: FGFu A347 6,2
Error in line 188: FGFu A793 65,7
Error in line 185: Udpr A347 58,2
Error in line 225: BFlz A34 328,
Error in line 214: FGFu A793 50,4
Error in line 234: FGFu S543 398,61
Error in line 233: FGFu S543 92,8
Error in line 231: pN0q34FxZ S543 1,1
Error in line 235: FGFu A793 99,4
Error in line 244: pN0q34FxZ S210 78,9
Error in line 241: Udpr A347 94,3
